kubernetes/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: image
          command: ["./docker-entrypoint.prod.sh"]
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: static-files
              mountPath: /app/static
            - name: media-files
              mountPath: /app/media
      volumes:
        - name: static-files
          persistentVolumeClaim:
            claimName: static-pvc
        - name: media-files
          persistentVolumeClaim:
            claimName: media-pvc
